changes in css file

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 .c1{
-    background-color:wheat;
+    background-color:chartreuse;
     height: 100px;
     width: 100px;
 }
